<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>net.logicsquad</groupId>
	<artifactId>wounit</artifactId>
	<packaging>jar</packaging>
	<version>2.0-SNAPSHOT</version>
	<name>WOUnit Framework</name>
	<description>The WOUnit framework contains a set of utilities for testing WebObjects applications using JUnit 4.7 or later capabilities.</description>
	<url>https://github.com/logicsquad/wounit</url>
	<inceptionYear>2009</inceptionYear>

	<organization>
		<name>Logic Squad</name>
		<url>https://logicsquad.net</url>
	</organization>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/logicsquad/wounit/issues</url>
	</issueManagement>

	<developers>
		<developer>
			<id>hprange</id>
			<name>Henrique Prange</name>
			<email>hprange@gmail.com</email>
			<organization>DOit S/A</organization>
			<organizationUrl>www.doit.com.br</organizationUrl>
			<roles>
				<role>Developer</role>
			</roles>
		</developer>
		<developer>
			<name>Paul Hoadley</name>
			<organization>Logic Squad</organization>
			<organizationUrl>https://logicsquad.net</organizationUrl>
			<roles>
				<role>Maintainer</role>
			</roles>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>Apache 2</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:https://github.com/logicsquad/wounit.git</connection>
		<url>https://github.com/logicsquad/wounit</url>
		<developerConnection>scm:git:https://github.com/logicsquad/wounit.git</developerConnection>
		<tag>HEAD</tag>
  </scm>

	<properties>
		<wonder.version>7.1</wonder.version>
		<webobjects.version>5.4.3</webobjects.version>
		<maven.compiler.release>21</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<project.scm.id>github</project.scm.id>
	</properties>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.4.0</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<artifactId>maven-javadoc-plugin</artifactId>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-release-plugin</artifactId>
					<version>3.3.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.12.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.16.0</version>
			</plugin>
			<plugin>
				<!-- Sets ${org.mockito:mockito-core:jar} for the Surefire argLine -->
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.11.0</version>
				<executions>
					<execution>
						<goals>
							<goal>properties</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<!-- We must fork processes for each test case because some tests leave
						EOF in a dirty state -->
					<forkCount>1</forkCount>
					<reuseForks>false</reuseForks>
					<!-- Mockito's inline mock maker needs its agent; attaching it at runtime
						is deprecated since Java 21 -->
					<argLine>-javaagent:${org.mockito:mockito-core:jar}</argLine>
					<excludes>
						<exclude>**/*StubTestCase.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.22.0</version>
			</plugin>
			<plugin>
				<groupId>com.mycila.maven-license-plugin</groupId>
				<artifactId>maven-license-plugin</artifactId>
				<version>1.9.0</version>
				<configuration>
					<header>src/etc/header.txt</header>
					<strictCheck>true</strictCheck>
					<excludes>
						<exclude>LICENSE.txt</exclude>
						<exclude>README.md</exclude>
						<exclude>.gitignore</exclude>
						<exclude>.maven/**</exclude>
						<exclude>.idea/**</exclude>
						<exclude>.maven_settings.xml</exclude>
						<exclude>src/test/resources/**</exclude>
					</excludes>
					<properties>
						<year>${project.inceptionYear}</year>
						<owner>hprange</owner>
						<email>hprange@gmail.com</email>
					</properties>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>wonder.core</groupId>
			<artifactId>ERFoundation</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>wonder.core</groupId>
			<artifactId>ERExtensions</artifactId>
			<version>${wonder.version}</version>
			<exclusions>
				<exclusion>
					<artifactId>junit</artifactId>
					<groupId>junit</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>wonder.eoadaptors</groupId>
			<artifactId>JavaMemoryAdaptor</artifactId>
			<version>${wonder.version}</version>
		</dependency>
		<dependency>
			<groupId>wonder.eof</groupId>
			<artifactId>ERAttributeExtension</artifactId>
			<version>${wonder.version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.webobjects</groupId>
			<artifactId>JavaFoundation</artifactId>
			<version>${webobjects.version}</version>
		</dependency>
		<dependency>
			<groupId>com.webobjects</groupId>
			<artifactId>JavaEOAccess</artifactId>
			<version>${webobjects.version}</version>
		</dependency>
		<dependency>
			<groupId>com.webobjects</groupId>
			<artifactId>JavaEOControl</artifactId>
			<version>${webobjects.version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-core</artifactId>
			<version>1.3</version>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.24.0</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>wonder.core</groupId>
			<artifactId>ERPrototypes</artifactId>
			<version>${wonder.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.12.0</version>
				<configuration>
					<detectLinks>true</detectLinks>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<linkJavadoc>true</linkJavadoc>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.28.0</version>
				<configuration>
					<linkXref>true</linkXref>
					<targetJdk>${maven.compiler.release}</targetJdk>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>3.6.0</version>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.10.4.1</version>
			</plugin>
		</plugins>
	</reporting>
</project>